# stock-price-prediction-lstm

./: .gitignore  LSTM_train_engine.py  PROJECT_PLAN.md  README.md  batch_feature_engineering.py  info.md  lstm_stock_model.pt  pyproject.toml  pytorch_data_loader.py  requirements.txt  tft_dataset_prep.py  train_engine.py  train_tft.py
Backend/: main.py  pyproject.toml  requirements.txt
Backend/api/v1/: predicitions.py  stocks.py  watchlist.py
Backend/core/: config.py
Backend/models/: lstm_arch.py  tft_arch.py
Backend/models/weights/: tft_stock_model.pt
Backend/schemas/: prediction.py
Backend/services/: data_service.py  feature_service.py  indicator_service.py  model_service.py  signal_service.py  validation_service.py
data/: data_fetcher.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: FeatureImportance.module.css  FeatureImportance.tsx  Header.module.css  Header.tsx  MetricsPanel.module.css  MetricsPanel.tsx  PriceChart.module.css  PriceChart.tsx  ValidationPanel.module.css  ValidationPanel.tsx  Watchlist.module.css  Watchlist.tsx
frontend/data/: generateTicker.ts  mockData.ts  types.ts
frontend/lib/: signal.ts
lightning_logs/version_0/: hparams.yaml  metrics.csv
lightning_logs/version_0/checkpoints/: epoch=1-step=7668.ckpt
lightning_logs/version_2/: metrics.csv
lightning_logs/version_2/checkpoints/: epoch=0-step=3834.ckpt
lightning_logs/version_3/: metrics.csv
lightning_logs/version_3/checkpoints/: epoch=6-step=26838.ckpt
scripts/: preprocess_demo.py
src/api/: inference.py  main.py
src/data/: features.py  labels.py
tests/: test_features.py
