[project]
name = "stock-price-prediction-lstm"
version = "0.1.0"
description = "Predict S&P 500 5-day price direction (UP/DOWN) with PyTorch LSTM/GRU/Transformer, TA-Lib, walk-forward validation, MC Dropout, and backtesting."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.0",
    "yfinance",
    # TA-Lib requires its C library installed separately (see note below).
    "TA-Lib",
    "pandas",
    "numpy",
    "scikit-learn",
    "wandb",
    "matplotlib",
    "seaborn",
    "tqdm",
    "PyYAML",
    "lxml>=6.1.1",
    "pytorch-forecasting>=1.8.0",
    "pytorch-lightning>=2.6.5",
    "lightning>=2.6.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
