[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.110.0",
    "joblib==1.3.2",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "redis==5.0.3",
    "scikit-learn==1.4.1.post1",
    "uvicorn[standard]==0.29.0",
    "yfinance==0.2.37",
]
